etylizer-FROZEN-SOURCE/test_files/recompilation/type_error/foo_V1.erl
-module(foo).

-export([foo/1]).

-spec foo(boolean()) -> boolean().
foo(X) -> X.
